--- a/templates/cart.html
+++ b/templates/cart.html
@@ -39,8 +39,12 @@
 <a href="{{ url_for('home') }}" class="btn btn-outline-secondary">
 <i class="bi bi-arrow-left"></i> Continue Shopping
 </a>
-<a href="#" class="btn btn-success">
-<i class="bi bi-credit-card"></i> Proceed to Checkout
+<!-- Change this line in cart.html -->
+
+<a href="{{ url_for('checkout') }}" class="btn btn-success">
+
+    <i class="bi bi-credit-card"></i> Checkout
+    
 </a>
 </div>
 {% else %}
